Update footer text to new message

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     </section>
 
     <footer>
-        <p>2026 Sahil Kasliwal. Built with passion and code.</p>
+        <p>It takes 7 seconds to built an impression i do it in 5</p>
     </footer>
 
     <!-- Music Player -->
